# todo-app-rs

./: .gitignore  Cargo.toml  README.md  themes.toml  todo.md  todo.xit
src/: app.rs  item.rs  main.rs  output.rs  response.rs  theme.rs  todo.rs  tui.rs  ui.rs
src/recur/: engine.rs  mod.rs  rule.rs  series.rs  store.rs
