[package]
name = "todo-app-rs"
version = "0.1.1"
edition = "2021"
authors = [
    "jordan <jordan@butterwick.tech>"
]
readme = "./README.md"
license = "CC0-1"

[dependencies]
chrono = "0.4.39"
ratatui = { version = "0.29", features = ["serde", "widget-calendar"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.49"
toml = "1.1.2"
